# libgpredict

./: CMakeLists.txt  gtk-sat-data.h  predict-tools.c  predict-tools.h  qth-data.h
extensions/: common.cmake  readme.txt  satpredict.i
extensions/php/: CMakeLists.txt  gen_php.bat  php_ex.i
extensions/php/cmake/: FindPHPLibs.cmake
extensions/php/demo/: readme.txt  sample.php
extensions/php/out_cpp/: php_satpredict.h  satpredict_wrap.cpp
extensions/php/out_php/: satpredict.php
extensions/python/: CMakeLists.txt  gen_python.bat  python_ex.i
extensions/python/demo/: readme.txt  sample.py
extensions/python/out_cpp/: satpredict_wrap.cxx
extensions/python/out_python/: satpredict.py
extensions/src/: PassItem.cpp  PassItem.h  SatCalc.cpp  SatCalc.h  SatPosition.cpp  SatPosition.h  TQth.cpp  TQth.h  TSat.cpp  TSat.h  TTime.cpp  TTime.h  utils.h
sgpsdp/: sgp4sdp4.h  sgp_in.c
